--- a/aula03/correcao-exercicio/package.json
+++ b/aula03/correcao-exercicio/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
     "yargs": "^17.7.2"
-  }
+  },
+  "name": "correcao-exercicio",
+  "version": "1.0.0",
+  "main": "exercicio.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node exercicio.js --operation=list"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
