feat: implementa servidor http

--- a/aula03/correcao-exercicio/package.json
+++ b/aula03/correcao-exercicio/package.json
@@ -1,9 +1,6 @@
 {
-  "dependencies": {
-    "yargs": "^17.7.2"
-  },
   "name": "correcao-exercicio",
-  "version": "1.0.0",
+  "version": "1.2.2",
   "main": "exercicio.js",
   "devDependencies": {},
   "scripts": {
@@ -12,5 +9,9 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "yargs": "^17.7.2",
+    "even": "^0.1.0"
+  }
 }
